Coalescence, precedence, unit tests
 - Coalescence gets its own node because it has a special meaning
 - Simplify constants transformation gets to do more work
 - Fix && and || precedence